// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SurveyQuestion > should render a multi select question correctly 1`] = `
<div>
  <div
    class="googlesitekit-survey__multi-select"
  >
    <div
      class="googlesitekit-survey__header"
    >
      <div
        class="googlesitekit-survey__header-logo"
      >
        <svg />
      </div>
      <div
        class="googlesitekit-survey__header-details"
      >
        <h3
          class="googlesitekit-typography googlesitekit-typography--headline googlesitekit-typography--small"
        >
          What are your favorite pizza toppings?
        </h3>
        <button
          aria-label="Dismiss"
          class="mdc-button googlesitekit-survey__header-close mdc-button--raised"
          target="_self"
          title="Dismiss"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="40"
            role="img"
            viewBox="0 0 24 24"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 11.9l3.3-3.4-1.1-1-3.2 3.3-3.2-3.3-1.1 1 3.3 3.4-3.5 3.6 1 1L12 13l3.5 3.5 1-1z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="googlesitekit-survey__body"
    >
      <div
        class="googlesitekit-survey__multi-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-checkbox"
          >
            <input
              class="mdc-checkbox__native-control"
              id="SurveyQuestionMultiSelect-0-answer-1"
              name="SurveyQuestionMultiSelect-0-answer-1"
              type="checkbox"
              value="1"
            />
            <div
              class="mdc-checkbox__background"
            >
              <svg
                class="mdc-checkbox__checkmark"
                viewBox="0 0 12 9"
              >
                <path
                  class="mdc-checkbox__checkmark-path"
                  d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
                  fill="none"
                  stroke="none"
                />
              </svg>
              <div
                class="mdc-checkbox__mixedmark"
              />
            </div>
          </div>
          <label
            for="SurveyQuestionMultiSelect-0-answer-1"
          >
            Pepperoni
          </label>
          
        </div>
      </div>
      <div
        class="googlesitekit-survey__multi-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-checkbox"
          >
            <input
              class="mdc-checkbox__native-control"
              id="SurveyQuestionMultiSelect-0-answer-2"
              name="SurveyQuestionMultiSelect-0-answer-2"
              type="checkbox"
              value="2"
            />
            <div
              class="mdc-checkbox__background"
            >
              <svg
                class="mdc-checkbox__checkmark"
                viewBox="0 0 12 9"
              >
                <path
                  class="mdc-checkbox__checkmark-path"
                  d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
                  fill="none"
                  stroke="none"
                />
              </svg>
              <div
                class="mdc-checkbox__mixedmark"
              />
            </div>
          </div>
          <label
            for="SurveyQuestionMultiSelect-0-answer-2"
          >
            Mushrooms
          </label>
          
        </div>
      </div>
      <div
        class="googlesitekit-survey__multi-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-checkbox"
          >
            <input
              class="mdc-checkbox__native-control"
              id="SurveyQuestionMultiSelect-0-answer-3"
              name="SurveyQuestionMultiSelect-0-answer-3"
              type="checkbox"
              value="3"
            />
            <div
              class="mdc-checkbox__background"
            >
              <svg
                class="mdc-checkbox__checkmark"
                viewBox="0 0 12 9"
              >
                <path
                  class="mdc-checkbox__checkmark-path"
                  d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
                  fill="none"
                  stroke="none"
                />
              </svg>
              <div
                class="mdc-checkbox__mixedmark"
              />
            </div>
          </div>
          <label
            for="SurveyQuestionMultiSelect-0-answer-3"
          >
            Sausage
          </label>
          
        </div>
      </div>
      <div
        class="googlesitekit-survey__multi-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-checkbox"
          >
            <input
              class="mdc-checkbox__native-control"
              id="SurveyQuestionMultiSelect-0-answer-4"
              name="SurveyQuestionMultiSelect-0-answer-4"
              type="checkbox"
              value="4"
            />
            <div
              class="mdc-checkbox__background"
            >
              <svg
                class="mdc-checkbox__checkmark"
                viewBox="0 0 12 9"
              >
                <path
                  class="mdc-checkbox__checkmark-path"
                  d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
                  fill="none"
                  stroke="none"
                />
              </svg>
              <div
                class="mdc-checkbox__mixedmark"
              />
            </div>
          </div>
          <label
            for="SurveyQuestionMultiSelect-0-answer-4"
          >
            Black Olives
          </label>
          
        </div>
      </div>
      <div
        class="googlesitekit-survey__multi-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-checkbox"
          >
            <input
              class="mdc-checkbox__native-control"
              id="SurveyQuestionMultiSelect-0-answer-5"
              name="SurveyQuestionMultiSelect-0-answer-5"
              type="checkbox"
              value="5"
            />
            <div
              class="mdc-checkbox__background"
            >
              <svg
                class="mdc-checkbox__checkmark"
                viewBox="0 0 12 9"
              >
                <path
                  class="mdc-checkbox__checkmark-path"
                  d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
                  fill="none"
                  stroke="none"
                />
              </svg>
              <div
                class="mdc-checkbox__mixedmark"
              />
            </div>
          </div>
          <label
            for="SurveyQuestionMultiSelect-0-answer-5"
          >
            Sweetcorn
          </label>
          
        </div>
      </div>
      <div
        class="googlesitekit-survey__multi-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-checkbox"
          >
            <input
              class="mdc-checkbox__native-control"
              id="SurveyQuestionMultiSelect-0-answer-6"
              name="SurveyQuestionMultiSelect-0-answer-6"
              type="checkbox"
              value="6"
            />
            <div
              class="mdc-checkbox__background"
            >
              <svg
                class="mdc-checkbox__checkmark"
                viewBox="0 0 12 9"
              >
                <path
                  class="mdc-checkbox__checkmark-path"
                  d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
                  fill="none"
                  stroke="none"
                />
              </svg>
              <div
                class="mdc-checkbox__mixedmark"
              />
            </div>
          </div>
          <label
            for="SurveyQuestionMultiSelect-0-answer-6"
          >
            Other
          </label>
          
        </div>
        <span
          class="screen-reader-text"
        >
          <label
            for="SurveyQuestionMultiSelect-0-answer-6-write-in"
          >
            Text input for option Other
          </label>
        </span>
        <div
          class="mdc-text-field mdc-text-field--disabled mdc-text-field--no-label"
        >
          <input
            class="mdc-text-field__input"
            disabled=""
            id="SurveyQuestionMultiSelect-0-answer-6-write-in"
            value=""
          />
          <div
            class="mdc-line-ripple"
          />
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-survey__footer"
    >
      <p
        aria-hidden="false"
        class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent"
      >
        Choose at least 2 answers
      </p>
      <button
        class="mdc-button mdc-button--raised"
        disabled=""
        target="_self"
      >
        <span
          class="mdc-button__label"
        >
          Submit
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SurveyQuestion > should render a rating question correctly 1`] = `
<div>
  <div
    class="googlesitekit-survey__question-rating"
  >
    <div
      class="googlesitekit-survey__header"
    >
      <div
        class="googlesitekit-survey__header-logo"
      >
        <svg />
      </div>
      <div
        class="googlesitekit-survey__header-details"
      >
        <h3
          class="googlesitekit-typography googlesitekit-typography--headline googlesitekit-typography--small"
        >
          If you are really happy, this survey will show a different completion!
        </h3>
        <button
          aria-label="Dismiss"
          class="mdc-button googlesitekit-survey__header-close mdc-button--raised"
          target="_self"
          title="Dismiss"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="40"
            role="img"
            viewBox="0 0 24 24"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 11.9l3.3-3.4-1.1-1-3.2 3.3-3.2-3.3-1.1 1 3.3 3.4-3.5 3.6 1 1L12 13l3.5 3.5 1-1z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="googlesitekit-survey__body"
    >
      <div
        class="googlesitekit-survey__choices"
      >
        <div
          class="googlesitekit-survey__choice"
        >
          <button
            aria-label="Unhappy"
            class="mdc-button mdc-button--raised"
            target="_self"
            title="Unhappy"
          >
            <svg />
          </button>
          <p
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Unhappy
          </p>
        </div>
        <div
          class="googlesitekit-survey__choice"
        >
          <button
            aria-label="Dissatisfied"
            class="mdc-button mdc-button--raised"
            target="_self"
            title="Dissatisfied"
          >
            <svg />
          </button>
          <p
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Dissatisfied
          </p>
        </div>
        <div
          class="googlesitekit-survey__choice"
        >
          <button
            aria-label="Neutral"
            class="mdc-button mdc-button--raised"
            target="_self"
            title="Neutral"
          >
            <svg />
          </button>
          <p
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Neutral
          </p>
        </div>
        <div
          class="googlesitekit-survey__choice"
        >
          <button
            aria-label="Satisfied"
            class="mdc-button mdc-button--raised"
            target="_self"
            title="Satisfied"
          >
            <svg />
          </button>
          <p
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Satisfied
          </p>
        </div>
        <div
          class="googlesitekit-survey__choice"
        >
          <button
            aria-label="Delighted"
            class="mdc-button mdc-button--raised"
            target="_self"
            title="Delighted"
          >
            <svg />
          </button>
          <p
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Delighted
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SurveyQuestion > should render a single select question correctly 1`] = `
<div>
  <div
    class="googlesitekit-single-select"
  >
    <div
      class="googlesitekit-survey__header"
    >
      <div
        class="googlesitekit-survey__header-logo"
      >
        <svg />
      </div>
      <div
        class="googlesitekit-survey__header-details"
      >
        <h3
          class="googlesitekit-typography googlesitekit-typography--headline googlesitekit-typography--small"
        >
          Based on your experience so far, how satisfied are you with Site Kit?
        </h3>
        <button
          aria-label="Dismiss"
          class="mdc-button googlesitekit-survey__header-close mdc-button--raised"
          target="_self"
          title="Dismiss"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="40"
            role="img"
            viewBox="0 0 24 24"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 11.9l3.3-3.4-1.1-1-3.2 3.3-3.2-3.3-1.1 1 3.3 3.4-3.5 3.6 1 1L12 13l3.5 3.5 1-1z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="googlesitekit-survey__body"
    >
      <div
        class="googlesitekit-single-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-radio"
          >
            <input
              class="mdc-radio__native-control"
              id="Unhappy"
              name="Unhappy"
              readonly=""
              type="radio"
              value="1"
            />
            <div
              class="mdc-radio__background"
            >
              <div
                class="mdc-radio__outer-circle"
              />
              <div
                class="mdc-radio__inner-circle"
              />
            </div>
          </div>
          <label
            for="Unhappy"
          >
            Unhappy
          </label>
        </div>
      </div>
      <div
        class="googlesitekit-single-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-radio"
          >
            <input
              class="mdc-radio__native-control"
              id="Dissatisfied"
              name="Dissatisfied"
              readonly=""
              type="radio"
              value="2"
            />
            <div
              class="mdc-radio__background"
            >
              <div
                class="mdc-radio__outer-circle"
              />
              <div
                class="mdc-radio__inner-circle"
              />
            </div>
          </div>
          <label
            for="Dissatisfied"
          >
            Dissatisfied
          </label>
        </div>
      </div>
      <div
        class="googlesitekit-single-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-radio"
          >
            <input
              class="mdc-radio__native-control"
              id="Neutral"
              name="Neutral"
              readonly=""
              type="radio"
              value="3"
            />
            <div
              class="mdc-radio__background"
            >
              <div
                class="mdc-radio__outer-circle"
              />
              <div
                class="mdc-radio__inner-circle"
              />
            </div>
          </div>
          <label
            for="Neutral"
          >
            Neutral
          </label>
        </div>
      </div>
      <div
        class="googlesitekit-single-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-radio"
          >
            <input
              class="mdc-radio__native-control"
              id="Satisfied"
              name="Satisfied"
              readonly=""
              type="radio"
              value="4"
            />
            <div
              class="mdc-radio__background"
            >
              <div
                class="mdc-radio__outer-circle"
              />
              <div
                class="mdc-radio__inner-circle"
              />
            </div>
          </div>
          <label
            for="Satisfied"
          >
            Satisfied
          </label>
        </div>
      </div>
      <div
        class="googlesitekit-single-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-radio"
          >
            <input
              class="mdc-radio__native-control"
              id="Delighted"
              name="Delighted"
              readonly=""
              type="radio"
              value="5"
            />
            <div
              class="mdc-radio__background"
            >
              <div
                class="mdc-radio__outer-circle"
              />
              <div
                class="mdc-radio__inner-circle"
              />
            </div>
          </div>
          <label
            for="Delighted"
          >
            Delighted
          </label>
        </div>
      </div>
      <div
        class="googlesitekit-single-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-radio"
          >
            <input
              class="mdc-radio__native-control"
              id="Other"
              name="Other"
              readonly=""
              type="radio"
              value="6"
            />
            <div
              class="mdc-radio__background"
            >
              <div
                class="mdc-radio__outer-circle"
              />
              <div
                class="mdc-radio__inner-circle"
              />
            </div>
          </div>
          <label
            for="Other"
          >
            Other
          </label>
        </div>
        <span
          class="screen-reader-text"
        >
          <label
            for="googlesitekit-survey__multi-select-6-Other"
          >
            Text input for option Other
          </label>
        </span>
        <div
          class="mdc-text-field mdc-text-field--disabled mdc-text-field--no-label"
        >
          <input
            class="mdc-text-field__input"
            disabled=""
            id="googlesitekit-survey__multi-select-6-Other"
            value=""
          />
          <div
            class="mdc-line-ripple"
          />
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-survey__footer"
    >
      <button
        class="mdc-button mdc-button--raised"
        disabled=""
        target="_self"
      >
        <span
          class="mdc-button__label"
        >
          Submit
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SurveyQuestion > should render an open text question correctly 1`] = `
<div>
  <div
    class="googlesitekit-survey__open-text"
  >
    <div
      class="googlesitekit-survey__header"
    >
      <div
        class="googlesitekit-survey__header-logo"
      >
        <svg />
      </div>
      <div
        class="googlesitekit-survey__header-details"
      >
        <h3
          class="googlesitekit-typography googlesitekit-typography--headline googlesitekit-typography--small"
        >
          How satisfied are you with Site Kit?
        </h3>
        <button
          aria-label="Dismiss"
          class="mdc-button googlesitekit-survey__header-close mdc-button--raised"
          target="_self"
          title="Dismiss"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="40"
            role="img"
            viewBox="0 0 24 24"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 11.9l3.3-3.4-1.1-1-3.2 3.3-3.2-3.3-1.1 1 3.3 3.4-3.5 3.6 1 1L12 13l3.5 3.5 1-1z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="googlesitekit-survey__body"
    >
      <span
        class="screen-reader-text"
      >
        <label
          for="SurveyQuestionOpenText-0"
        >
          Write here
        </label>
      </span>
      <div
        class="mdc-text-field mdc-text-field--outlined mdc-text-field--textarea"
        name="survey-opentext-SurveyQuestionOpenText-0"
      >
        <textarea
          class="mdc-text-field__input"
          id="SurveyQuestionOpenText-0"
        />
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label"
              for="SurveyQuestionOpenText-0"
              style="transition-duration: 0s;"
            >
              Write here
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
      <div
        class="mdc-text-field-helper-line"
      >
        <p
          aria-hidden="false"
          class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent"
        >
          Based on your experience so far, tell us.
        </p>
      </div>
    </div>
    <div
      class="googlesitekit-survey__footer"
    >
      <button
        class="mdc-button mdc-button--raised"
        disabled=""
        target="_self"
      >
        <span
          class="mdc-button__label"
        >
          Submit
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SurveyQuestion should render a multi select question correctly 1`] = `
<div>
  <div
    class="googlesitekit-survey__multi-select"
  >
    <div
      class="googlesitekit-survey__header"
    >
      <div
        class="googlesitekit-survey__header-logo"
      >
        <svg />
      </div>
      <div
        class="googlesitekit-survey__header-details"
      >
        <h3
          class="googlesitekit-typography googlesitekit-typography--headline googlesitekit-typography--small"
        >
          What are your favorite pizza toppings?
        </h3>
        <button
          aria-label="Dismiss"
          class="mdc-button googlesitekit-survey__header-close mdc-button--raised"
          target="_self"
          title="Dismiss"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="40"
            role="img"
            viewBox="0 0 24 24"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="googlesitekit-survey__body"
    >
      <div
        class="googlesitekit-survey__multi-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-checkbox"
          >
            <input
              class="mdc-checkbox__native-control"
              id="SurveyQuestionMultiSelect-0-answer-1"
              name="SurveyQuestionMultiSelect-0-answer-1"
              type="checkbox"
              value="1"
            />
            <div
              class="mdc-checkbox__background"
            >
              <svg
                class="mdc-checkbox__checkmark"
                viewBox="0 0 12 9"
              >
                <path
                  class="mdc-checkbox__checkmark-path"
                  d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
                  fill="none"
                  stroke="none"
                />
              </svg>
              <div
                class="mdc-checkbox__mixedmark"
              />
            </div>
          </div>
          <label
            for="SurveyQuestionMultiSelect-0-answer-1"
          >
            Pepperoni
          </label>
          
        </div>
      </div>
      <div
        class="googlesitekit-survey__multi-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-checkbox"
          >
            <input
              class="mdc-checkbox__native-control"
              id="SurveyQuestionMultiSelect-0-answer-2"
              name="SurveyQuestionMultiSelect-0-answer-2"
              type="checkbox"
              value="2"
            />
            <div
              class="mdc-checkbox__background"
            >
              <svg
                class="mdc-checkbox__checkmark"
                viewBox="0 0 12 9"
              >
                <path
                  class="mdc-checkbox__checkmark-path"
                  d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
                  fill="none"
                  stroke="none"
                />
              </svg>
              <div
                class="mdc-checkbox__mixedmark"
              />
            </div>
          </div>
          <label
            for="SurveyQuestionMultiSelect-0-answer-2"
          >
            Mushrooms
          </label>
          
        </div>
      </div>
      <div
        class="googlesitekit-survey__multi-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-checkbox"
          >
            <input
              class="mdc-checkbox__native-control"
              id="SurveyQuestionMultiSelect-0-answer-3"
              name="SurveyQuestionMultiSelect-0-answer-3"
              type="checkbox"
              value="3"
            />
            <div
              class="mdc-checkbox__background"
            >
              <svg
                class="mdc-checkbox__checkmark"
                viewBox="0 0 12 9"
              >
                <path
                  class="mdc-checkbox__checkmark-path"
                  d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
                  fill="none"
                  stroke="none"
                />
              </svg>
              <div
                class="mdc-checkbox__mixedmark"
              />
            </div>
          </div>
          <label
            for="SurveyQuestionMultiSelect-0-answer-3"
          >
            Sausage
          </label>
          
        </div>
      </div>
      <div
        class="googlesitekit-survey__multi-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-checkbox"
          >
            <input
              class="mdc-checkbox__native-control"
              id="SurveyQuestionMultiSelect-0-answer-4"
              name="SurveyQuestionMultiSelect-0-answer-4"
              type="checkbox"
              value="4"
            />
            <div
              class="mdc-checkbox__background"
            >
              <svg
                class="mdc-checkbox__checkmark"
                viewBox="0 0 12 9"
              >
                <path
                  class="mdc-checkbox__checkmark-path"
                  d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
                  fill="none"
                  stroke="none"
                />
              </svg>
              <div
                class="mdc-checkbox__mixedmark"
              />
            </div>
          </div>
          <label
            for="SurveyQuestionMultiSelect-0-answer-4"
          >
            Black Olives
          </label>
          
        </div>
      </div>
      <div
        class="googlesitekit-survey__multi-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-checkbox"
          >
            <input
              class="mdc-checkbox__native-control"
              id="SurveyQuestionMultiSelect-0-answer-5"
              name="SurveyQuestionMultiSelect-0-answer-5"
              type="checkbox"
              value="5"
            />
            <div
              class="mdc-checkbox__background"
            >
              <svg
                class="mdc-checkbox__checkmark"
                viewBox="0 0 12 9"
              >
                <path
                  class="mdc-checkbox__checkmark-path"
                  d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
                  fill="none"
                  stroke="none"
                />
              </svg>
              <div
                class="mdc-checkbox__mixedmark"
              />
            </div>
          </div>
          <label
            for="SurveyQuestionMultiSelect-0-answer-5"
          >
            Sweetcorn
          </label>
          
        </div>
      </div>
      <div
        class="googlesitekit-survey__multi-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-checkbox"
          >
            <input
              class="mdc-checkbox__native-control"
              id="SurveyQuestionMultiSelect-0-answer-6"
              name="SurveyQuestionMultiSelect-0-answer-6"
              type="checkbox"
              value="6"
            />
            <div
              class="mdc-checkbox__background"
            >
              <svg
                class="mdc-checkbox__checkmark"
                viewBox="0 0 12 9"
              >
                <path
                  class="mdc-checkbox__checkmark-path"
                  d="M2.08301 5.28834L3.55703 7.29507C4.24647 8.23368 5.5034 8.23368 6.19285 7.29507L10.083 1.99902"
                  fill="none"
                  stroke="none"
                />
              </svg>
              <div
                class="mdc-checkbox__mixedmark"
              />
            </div>
          </div>
          <label
            for="SurveyQuestionMultiSelect-0-answer-6"
          >
            Other
          </label>
          
        </div>
        <span
          class="screen-reader-text"
        >
          <label
            for="SurveyQuestionMultiSelect-0-answer-6-write-in"
          >
            Text input for option Other
          </label>
        </span>
        <div
          class="mdc-text-field mdc-text-field--disabled mdc-text-field--no-label"
        >
          <input
            class="mdc-text-field__input"
            disabled=""
            id="SurveyQuestionMultiSelect-0-answer-6-write-in"
            value=""
          />
          <div
            class="mdc-line-ripple"
          />
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-survey__footer"
    >
      <p
        aria-hidden="false"
        class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent"
      >
        Choose at least 2 answers
      </p>
      <button
        class="mdc-button mdc-button--raised"
        disabled=""
        target="_self"
      >
        <span
          class="mdc-button__label"
        >
          Submit
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SurveyQuestion should render a rating question correctly 1`] = `
<div>
  <div
    class="googlesitekit-survey__question-rating"
  >
    <div
      class="googlesitekit-survey__header"
    >
      <div
        class="googlesitekit-survey__header-logo"
      >
        <svg />
      </div>
      <div
        class="googlesitekit-survey__header-details"
      >
        <h3
          class="googlesitekit-typography googlesitekit-typography--headline googlesitekit-typography--small"
        >
          If you are really happy, this survey will show a different completion!
        </h3>
        <button
          aria-label="Dismiss"
          class="mdc-button googlesitekit-survey__header-close mdc-button--raised"
          target="_self"
          title="Dismiss"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="40"
            role="img"
            viewBox="0 0 24 24"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="googlesitekit-survey__body"
    >
      <div
        class="googlesitekit-survey__choices"
      >
        <div
          class="googlesitekit-survey__choice"
        >
          <button
            aria-label="Unhappy"
            class="mdc-button mdc-button--raised"
            target="_self"
            title="Unhappy"
          >
            <svg />
          </button>
          <p
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Unhappy
          </p>
        </div>
        <div
          class="googlesitekit-survey__choice"
        >
          <button
            aria-label="Dissatisfied"
            class="mdc-button mdc-button--raised"
            target="_self"
            title="Dissatisfied"
          >
            <svg />
          </button>
          <p
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Dissatisfied
          </p>
        </div>
        <div
          class="googlesitekit-survey__choice"
        >
          <button
            aria-label="Neutral"
            class="mdc-button mdc-button--raised"
            target="_self"
            title="Neutral"
          >
            <svg />
          </button>
          <p
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Neutral
          </p>
        </div>
        <div
          class="googlesitekit-survey__choice"
        >
          <button
            aria-label="Satisfied"
            class="mdc-button mdc-button--raised"
            target="_self"
            title="Satisfied"
          >
            <svg />
          </button>
          <p
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Satisfied
          </p>
        </div>
        <div
          class="googlesitekit-survey__choice"
        >
          <button
            aria-label="Delighted"
            class="mdc-button mdc-button--raised"
            target="_self"
            title="Delighted"
          >
            <svg />
          </button>
          <p
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--medium"
          >
            Delighted
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SurveyQuestion should render a single select question correctly 1`] = `
<div>
  <div
    class="googlesitekit-single-select"
  >
    <div
      class="googlesitekit-survey__header"
    >
      <div
        class="googlesitekit-survey__header-logo"
      >
        <svg />
      </div>
      <div
        class="googlesitekit-survey__header-details"
      >
        <h3
          class="googlesitekit-typography googlesitekit-typography--headline googlesitekit-typography--small"
        >
          Based on your experience so far, how satisfied are you with Site Kit?
        </h3>
        <button
          aria-label="Dismiss"
          class="mdc-button googlesitekit-survey__header-close mdc-button--raised"
          target="_self"
          title="Dismiss"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="40"
            role="img"
            viewBox="0 0 24 24"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="googlesitekit-survey__body"
    >
      <div
        class="googlesitekit-single-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-radio"
          >
            <input
              class="mdc-radio__native-control"
              id="Unhappy"
              name="Unhappy"
              readonly=""
              type="radio"
              value="1"
            />
            <div
              class="mdc-radio__background"
            >
              <div
                class="mdc-radio__outer-circle"
              />
              <div
                class="mdc-radio__inner-circle"
              />
            </div>
          </div>
          <label
            for="Unhappy"
          >
            Unhappy
          </label>
        </div>
      </div>
      <div
        class="googlesitekit-single-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-radio"
          >
            <input
              class="mdc-radio__native-control"
              id="Dissatisfied"
              name="Dissatisfied"
              readonly=""
              type="radio"
              value="2"
            />
            <div
              class="mdc-radio__background"
            >
              <div
                class="mdc-radio__outer-circle"
              />
              <div
                class="mdc-radio__inner-circle"
              />
            </div>
          </div>
          <label
            for="Dissatisfied"
          >
            Dissatisfied
          </label>
        </div>
      </div>
      <div
        class="googlesitekit-single-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-radio"
          >
            <input
              class="mdc-radio__native-control"
              id="Neutral"
              name="Neutral"
              readonly=""
              type="radio"
              value="3"
            />
            <div
              class="mdc-radio__background"
            >
              <div
                class="mdc-radio__outer-circle"
              />
              <div
                class="mdc-radio__inner-circle"
              />
            </div>
          </div>
          <label
            for="Neutral"
          >
            Neutral
          </label>
        </div>
      </div>
      <div
        class="googlesitekit-single-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-radio"
          >
            <input
              class="mdc-radio__native-control"
              id="Satisfied"
              name="Satisfied"
              readonly=""
              type="radio"
              value="4"
            />
            <div
              class="mdc-radio__background"
            >
              <div
                class="mdc-radio__outer-circle"
              />
              <div
                class="mdc-radio__inner-circle"
              />
            </div>
          </div>
          <label
            for="Satisfied"
          >
            Satisfied
          </label>
        </div>
      </div>
      <div
        class="googlesitekit-single-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-radio"
          >
            <input
              class="mdc-radio__native-control"
              id="Delighted"
              name="Delighted"
              readonly=""
              type="radio"
              value="5"
            />
            <div
              class="mdc-radio__background"
            >
              <div
                class="mdc-radio__outer-circle"
              />
              <div
                class="mdc-radio__inner-circle"
              />
            </div>
          </div>
          <label
            for="Delighted"
          >
            Delighted
          </label>
        </div>
      </div>
      <div
        class="googlesitekit-single-select__choice"
      >
        <div
          class="mdc-form-field"
        >
          <div
            class="mdc-radio"
          >
            <input
              class="mdc-radio__native-control"
              id="Other"
              name="Other"
              readonly=""
              type="radio"
              value="6"
            />
            <div
              class="mdc-radio__background"
            >
              <div
                class="mdc-radio__outer-circle"
              />
              <div
                class="mdc-radio__inner-circle"
              />
            </div>
          </div>
          <label
            for="Other"
          >
            Other
          </label>
        </div>
        <span
          class="screen-reader-text"
        >
          <label
            for="googlesitekit-survey__multi-select-6-Other"
          >
            Text input for option Other
          </label>
        </span>
        <div
          class="mdc-text-field mdc-text-field--disabled mdc-text-field--no-label"
        >
          <input
            class="mdc-text-field__input"
            disabled=""
            id="googlesitekit-survey__multi-select-6-Other"
            value=""
          />
          <div
            class="mdc-line-ripple"
          />
        </div>
      </div>
    </div>
    <div
      class="googlesitekit-survey__footer"
    >
      <button
        class="mdc-button mdc-button--raised"
        disabled=""
        target="_self"
      >
        <span
          class="mdc-button__label"
        >
          Submit
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SurveyQuestion should render an open text question correctly 1`] = `
<div>
  <div
    class="googlesitekit-survey__open-text"
  >
    <div
      class="googlesitekit-survey__header"
    >
      <div
        class="googlesitekit-survey__header-logo"
      >
        <svg />
      </div>
      <div
        class="googlesitekit-survey__header-details"
      >
        <h3
          class="googlesitekit-typography googlesitekit-typography--headline googlesitekit-typography--small"
        >
          How satisfied are you with Site Kit?
        </h3>
        <button
          aria-label="Dismiss"
          class="mdc-button googlesitekit-survey__header-close mdc-button--raised"
          target="_self"
          title="Dismiss"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="40"
            role="img"
            viewBox="0 0 24 24"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="googlesitekit-survey__body"
    >
      <span
        class="screen-reader-text"
      >
        <label
          for="SurveyQuestionOpenText-0"
        >
          Write here
        </label>
      </span>
      <div
        class="mdc-text-field mdc-text-field--outlined mdc-text-field--textarea"
        name="survey-opentext-SurveyQuestionOpenText-0"
      >
        <textarea
          class="mdc-text-field__input"
          id="SurveyQuestionOpenText-0"
        />
        <div
          class="mdc-notched-outline mdc-notched-outline--upgraded"
        >
          <div
            class="mdc-notched-outline__leading"
          />
          <div
            class="mdc-notched-outline__notch"
          >
            <label
              class="mdc-floating-label"
              for="SurveyQuestionOpenText-0"
              style="transition-duration: 0s;"
            >
              Write here
            </label>
          </div>
          <div
            class="mdc-notched-outline__trailing"
          />
        </div>
      </div>
      <div
        class="mdc-text-field-helper-line"
      >
        <p
          aria-hidden="false"
          class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent"
        >
          Based on your experience so far, tell us.
        </p>
      </div>
    </div>
    <div
      class="googlesitekit-survey__footer"
    >
      <button
        class="mdc-button mdc-button--raised"
        disabled=""
        target="_self"
      >
        <span
          class="mdc-button__label"
        >
          Submit
        </span>
      </button>
    </div>
  </div>
</div>
`;
